# bag-nabit

./: .gitignore  CHANGES.md  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: update_docs.py
src/nabit/: __init__.py
src/nabit/lib/: archive.py  capture.py  sign.py  utils.py
src/nabit/lib/backends/: base.py  path.py  url.py
test/: generate_certs.sh
test/fixtures/pki/: domain-chain.pem  email-chain.pem  email-signing.key  root-ca.crt
tests/: conftest.py  test_archive.py  test_capture.py  test_cli.py  test_scripts.py  test_validation.py  utils.py
tests/backends/: test_path_backend.py  test_url_backend.py
tests/fixtures/: generate_certs.sh
tests/fixtures/pki/: domain-signing-enc.key  domain-signing.crt  domain-signing.key  email-signing.crt  intermediate-ca.crt  intermediate-ca.key  root-ca.key
