[project]
name = "nabit"
version = "0.1.1"
description = "Archive and sign datasets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "warcio>=1.7.4",
    "requests>=2.32.3",
    "bagit>=1.8.1",
    "setuptools>=75.6.0",  # required by bagit
]

[project.scripts]
nabit = "nabit.bin.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "inline-snapshot>=0.14.0",
    "pytest-cov>=6.0.0",
    "pytest-httpserver>=1.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=nabit --cov-report=term-missing --doctest-modules"
testpaths = ["tests", "src"]

[tool.coverage.run]
source = ["nabit"]
branch = true

